[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/SettingsPopup.gd" id="1"]

[node name="SettingsPopup" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
visible = false
script = ExtResource("1")

[node name="Dimmer" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.35)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -160.0
offset_right = 160.0
offset_bottom = 160.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0
custom_minimum_size = Vector2(0, 280)
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Panel/VBox"]
text = "Settings"
theme_override_font_sizes/font_size = 20

[node name="MasterRow" type="HBoxContainer" parent="Panel/VBox"]
theme_override_constants/separation = 8

[node name="MasterLabel" type="Label" parent="Panel/VBox/MasterRow"]
text = "Master Volume"
size_flags_horizontal = 1

[node name="MasterSlider" type="HSlider" parent="Panel/VBox/MasterRow"]
min_value = 0.0
max_value = 1.0
step = 0.01
value = 1.0
size_flags_horizontal = 3

[node name="SfxRow" type="HBoxContainer" parent="Panel/VBox"]
theme_override_constants/separation = 8

[node name="SfxLabel" type="Label" parent="Panel/VBox/SfxRow"]
text = "SFX Volume"
size_flags_horizontal = 1

[node name="SfxSlider" type="HSlider" parent="Panel/VBox/SfxRow"]
min_value = 0.0
max_value = 1.0
step = 0.01
value = 1.0
size_flags_horizontal = 3

[node name="AnimRow" type="HBoxContainer" parent="Panel/VBox"]
theme_override_constants/separation = 8

[node name="AnimLabel" type="Label" parent="Panel/VBox/AnimRow"]
text = "Animation Speed"
size_flags_horizontal = 1

[node name="AnimSlider" type="HSlider" parent="Panel/VBox/AnimRow"]
min_value = 0.5
max_value = 2.0
step = 0.05
value = 1.0
size_flags_horizontal = 3

[node name="ThemeRow" type="HBoxContainer" parent="Panel/VBox"]
theme_override_constants/separation = 8

[node name="ThemeLabel" type="Label" parent="Panel/VBox/ThemeRow"]
text = "Theme"
size_flags_horizontal = 1

[node name="ThemeOption" type="OptionButton" parent="Panel/VBox/ThemeRow"]
size_flags_horizontal = 3

[node name="Buttons" type="HBoxContainer" parent="Panel/VBox"]
theme_override_constants/separation = 8

[node name="ApplyBtn" type="Button" parent="Panel/VBox/Buttons"]
text = "Apply"
size_flags_horizontal = 1

[node name="CancelBtn" type="Button" parent="Panel/VBox/Buttons"]
text = "Cancel"
size_flags_horizontal = 1
